# friendly-ghost

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml  flake.nix  justfile
nix/: module.nix
src/: config.rs  email.rs  error.rs  filter.rs  journal.rs  llm.rs  main.rs  report.rs
