[package]
name = "friendly-ghost"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls-tls", "smtp-transport", "hostname"] }
serde = { version = "1", features = ["derive"] }
systemd = "0.10"
thiserror = "2"
regex = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
